--- a/Solution/Imgur Uploader.NET/Imgur Uploader.Net.vbproj
+++ b/Solution/Imgur Uploader.NET/Imgur Uploader.Net.vbproj
@@ -52,8 +52,9 @@
     <ApplicationIcon>Resources\imgur.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CButtonLib">
-      <HintPath>E:\Programas\Programación\Visual Studio 2013\{userdocs}\Visual Studio 2013\User Controls\WinForms\Standalone\Buttons\CButton\Compiled\CButtonLib.dll</HintPath>
+    <Reference Include="CButtonLib, Version=3.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CButtonLib.3.0.6\lib\net40\CButtonLib.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
@@ -78,7 +79,9 @@
     <Compile Include="Tools\ImgurAPI.vb" />
     <Compile Include="Tools\IniFileManager.vb" />
     <Compile Include="Tools\WindowSticker.vb" />
-    <Compile Include="UserInterface\Main.vb" />
+    <Compile Include="UserInterface\Main.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UserInterface\Main.Designer.vb">
       <DependentUpon>Main.vb</DependentUpon>
       <SubType>Form</SubType>
@@ -134,6 +137,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\Logo.png" />
   </ItemGroup>
   <ItemGroup>
